Added sensor support

--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
         "typescript": "2.8.3"
     },
     "dependencies": {
+        "abstract-database": "^0.0.4",
         "axios": "0.18.0",
         "body-parser": "1.18.2",
         "epoll": "2.0.1",
