--- a/package.json
+++ b/package.json
@@ -18,8 +18,8 @@
     "dependencies": {
         "axios": "0.18.0",
         "body-parser": "1.18.2",
-        "epoll": "2.0.1",
         "express": "4.16.3",
-        "onoff": "3.0.2"
+        "pigpio": "1.1.0",
+        "pigpio-mock": "0.0.1"
     }
 }
