--- a/package.json
+++ b/package.json
@@ -19,7 +19,7 @@
         "axios": "0.18.0",
         "body-parser": "1.18.2",
         "express": "4.16.3",
-        "pigpio": "1.1.0",
-        "pigpio-mock": "0.0.1"
+        "pigpio-mock": "0.0.1",
+        "rxjs": "^6.3.3"
     }
 }
