--- a/service.config.json
+++ b/service.config.json
@@ -1,5 +1,7 @@
 {
-    "port": "3000",
-    "name": "driveway-rasp-pi",
-    "homeServerHost": "http://localhost:8000"
+  "port": "3000",
+  "name": "driveway-rasp-pi",
+  "homeServerHost": "127.0.0.1",
+  "homeServerPort": "8000",
+  "applicationSecret": "HomeBridgeClient"
 }
